apps/seerr/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: seerr
  namespace: seerr
spec:
  selector:
    app: seerr
  ports:
    - protocol: TCP
      port: 5055
      targetPort: 5055
