apps/seerr/05-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: seerr
  namespace: seerr
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`seerr.${CLUSTER_DOMAIN}`)
      kind: Rule
      services:
        - name: overseerr
          port: 5055
          scheme: http
  tls:
    secretName: overseerr-tls
